[package]
name = "dd"
version = "0.1.0"
edition = "2021"
authors = ["Georgiy Komarov <jubnzv@gmail.com>"]

[dependencies]
derivative = "2.2.*"
wait-timeout = "0.2.*"
env_logger = "0.9.*"
clap = { version = "3.0.*", features = ["derive"] }
log = "0.4.*"
tree-sitter = "0.20.*"
tempfile = "3.3.*"

[build-dependencies]
cc="*"
